--- a/build.gradle
+++ b/build.gradle
@@ -8,15 +8,30 @@ group = 'com.wisdom'
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = '1.8'
 
+apply plugin: 'war'
+
 repositories {
+    maven {
+        url 'http://maven.aliyun.com/nexus/content/groups/public/'
+    }
+    maven {
+        url 'http://maven.aliyun.com/nexus/content/repositories/jcenter'
+    }
     mavenCentral()
 }
 
 dependencies {
-    implementation 'org.springframework.boot:spring-boot-starter-web'
+    compile 'org.springframework.boot:spring-boot-starter-web'
+    compile('org.springframework.boot:spring-boot-starter-data-jpa')
     testImplementation('org.springframework.boot:spring-boot-starter-test') {
         exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
     }
+
+    providedCompile('javax.servlet:jstl')
+    providedCompile('javax.servlet:javax.servlet-api')
+    compile('org.apache.tomcat.embed:tomcat-embed-jasper')
+    compile('org.springframework.boot:spring-boot-starter-tomcat')
+
     // https://mvnrepository.com/artifact/com.alibaba/fastjson
     compile group: 'com.alibaba', name: 'fastjson', version: '1.2.58'
     // https://mvnrepository.com/artifact/commons-codec/commons-codec
@@ -24,41 +39,11 @@ dependencies {
     compile group: 'commons-io', name: 'commons-io', version: '2.4'
     // https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-jdbc
     compile group: 'org.springframework.boot', name: 'spring-boot-starter-jdbc', version: '2.2.1.RELEASE'
-    compile "org.springframework.boot:spring-boot-starter-logging:2.2.1.RELEAS"
     compile group: 'org.apache.commons', name: 'commons-dbcp2', version: '2.6.0'
     compile group: 'org.hibernate.validator', name: 'hibernate-validator', version: '6.0.17.Final'
     compile group: 'org.apache.httpcomponents', name: 'httpclient', version: '4.5.8'
     // https://mvnrepository.com/artifact/org.postgresql/postgresql
     compile group: 'org.postgresql', name: 'postgresql', version: '42.2.5'
-//    // https://mvnrepository.com/artifact/javax.servlet/jstl
-//    compile group: 'javax.servlet', name: 'jstl', version: '1.2'
-//    // https://mvnrepository.com/artifact/org.apache.tomcat.embed/tomcat-embed-jasper
-//    compile group: 'org.apache.tomcat.embed', name: 'tomcat-embed-jasper', version: '9.0.16'
-//    // https://mvnrepository.com/artifact/javax.servlet/javax.servlet-api
-//    providedCompile group: 'javax.servlet', name: 'javax.servlet-api', version: '3.1.0'
-//// https://mvnrepository.com/artifact/org.apache.tomcat.embed/tomcat-embed-core
-//    compile group: 'org.apache.tomcat.embed', name: 'tomcat-embed-core', version: '9.0.24'
-//    // https://mvnrepository.com/artifact/javax.servlet.jsp/javax.servlet.jsp-api
-//    providedCompile group: 'javax.servlet.jsp', name: 'javax.servlet.jsp-api', version: '2.2.1'
-//    // https://mvnrepository.com/artifact/org.apache.tomcat/tomcat-jsp-api
-//    compile group: 'org.apache.tomcat', name: 'tomcat-jsp-api', version: '9.0.22'
-    compile('org.apache.tomcat.embed:tomcat-embed-jasper')
-    compile('org.springframework.boot:spring-boot-starter-tomcat')
-    providedCompile('javax.servlet:jstl')
-    providedCompile('javax.servlet:javax.servlet-api')
-
-
-
-
-//    compile "org.slf4j:slf4j-api:1.7.7"
-//    // used to hide spring initialization logs messages in samples
-//    optional "org.slf4j:jcl-over-slf4j:1.7.7"
-
-//    // https://mvnrepository.com/artifact/org.slf4j/slf4j-api
-//    compile group: 'org.slf4j', name: 'slf4j-api', version: '1.7.25'
-//    // https://mvnrepository.com/artifact/org.slf4j/slf4j-nop
-//    testCompile group: 'org.slf4j', name: 'slf4j-nop', version: '1.7.25'
-
 
 }
 
