--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,13 +3,16 @@ spring.datasource.url=${DATA_SOURCE_URL:jdbc:postgresql://192.168.1.36:5433/post
 spring.datasource.username=${DB_USERNAME:replica}
 spring.datasource.password=${DB_PASSWORD:replica}
 spring.datasource.type=org.apache.commons.dbcp2.BasicDataSource
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 #spring:
 #mvc:
 #view:
 #prefix: /WEB-INF/jsp/
 #suffix: .jsp
-spring.mvc.view.prefix=/
-spring.mvc.view.suffix=.jsp
+#spring.mvc.view.prefix=/
+#spring.mvc.view.suffix=.jsp
+spring.thymeleaf.mode = LEGACYHTML5
+
 
 #端口
 server.port=${SERVER_PORT:8888}
@@ -17,5 +20,5 @@ server.port=${SERVER_PORT:8888}
 node=192.168.1.11:19585
 #未确认区块最大数
 unconfirmedBlocks=100
-#最多可减区块高度
-maxControlBlocks=20
+password=123456
+imageVersion=0.0.3
