--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,13 +11,29 @@ spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 #suffix: .jsp
 #spring.mvc.view.prefix=/
 #spring.mvc.view.suffix=.jsp
+spring.mvc.static-path-pattern=/**
+spring.thymeleaf.check-template-location=true
+spring.thymeleaf.prefix=classpath:/templates/
+spring.thymeleaf.suffix=.html
+spring.thymeleaf.encoding=UTF-8
+spring.thymeleaf.cache=false
 spring.thymeleaf.mode = LEGACYHTML5
 
+#postgres端口
+postgres.port=${POSTGRES_PORT:5432}
+#syspassword
+sys.password=${SYS_PASSWORD:123456}
+#Core容器名称
+core.name=${CORE_NAME:wdc_core_v0.0.3}
+#pgsql容器名称
+postgres.name=${POSTGRES_NAME:wdc_pgsql_v0.0.3}
+#开启导入开关
+import.valve=${IMPORT_VALVE:false}
 
 #端口
 server.port=${SERVER_PORT:8888}
 #连接的节点
-node=192.168.1.11:19585
+node=${NODE:192.168.1.11:19585}
 #未确认区块最大数
 unconfirmedBlocks=100
 password=123456
