--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -28,7 +28,7 @@ core.name=${CORE_NAME:wdc_core_v0.0.3}
 #pgsql容器名称
 postgres.name=${POSTGRES_NAME:wdc_pgsql_v0.0.3}
 #开启导入开关
-import.valve=${IMPORT_VALVE:false}
+import.valve=${IMPORT_VALVE:true}
 
 #端口
 server.port=${SERVER_PORT:8889}
