--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 ############################### 数据库连接配置 ###########################################
-spring.datasource.url=${DATA_SOURCE_URL:jdbc:postgresql://192.168.1.36:5433/postgres}
+spring.datasource.url=${DATA_SOURCE_URL:jdbc:postgresql://192.168.1.11:5433/postgres}
 spring.datasource.username=${DB_USERNAME:replica}
 spring.datasource.password=${DB_PASSWORD:replica}
 spring.datasource.type=org.apache.commons.dbcp2.BasicDataSource
@@ -16,11 +16,11 @@ spring.thymeleaf.check-template-location=true
 spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
 spring.thymeleaf.encoding=UTF-8
-spring.thymeleaf.cache=false
+spring.thymeleaf.cache=true
 spring.thymeleaf.mode = LEGACYHTML5
 
 #postgres端口
-postgres.port=${POSTGRES_PORT:5432}
+postgres.port=${POSTGRES_PORT:5433}
 #syspassword
 sys.password=${SYS_PASSWORD:123456}
 #Core容器名称
@@ -29,7 +29,10 @@ core.name=${CORE_NAME:wdc_core_v0.0.3}
 postgres.name=${POSTGRES_NAME:wdc_pgsql_v0.0.3}
 #开启导入开关
 import.valve=${IMPORT_VALVE:true}
-
+#pgsql IP
+postgres.ip=${POSTGRES_IP:192.168.1.236}
+#pgsql密码
+postgres.pwd=${POSTGRES_PWD:replica}
 #端口
 server.port=${SERVER_PORT:8889}
 #连接的节点
