--- a/build.gradle
+++ b/build.gradle
@@ -43,6 +43,8 @@ repositories {
 
 dependencies {
     compile "com.google.guava:guava:24.1-jre"
+    // https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter
+    compile group: 'org.springframework.boot', name: 'spring-boot-starter', version: '2.1.6.RELEASE'
     compile 'org.springframework.boot:spring-boot-starter-web'
     compile('org.springframework.boot:spring-boot-starter-data-jpa')
     testImplementation('org.springframework.boot:spring-boot-starter-test') {
@@ -84,10 +86,12 @@ dependencies {
     // https://mvnrepository.com/artifact/com.google.protobuf/protobuf-java
     compile group: 'com.google.protobuf', name: 'protobuf-java', version: '3.6.1'
     compile group: 'com.google.code.gson', name: 'gson', version: '2.8.5'
-
-
-
-
+    // https://mvnrepository.com/artifact/com.sun.mail/javax.mail
+    compile group: 'com.sun.mail', name: 'javax.mail', version: '1.6.2'
+    // https://mvnrepository.com/artifact/org.iq80.leveldb/leveldb
+    compile group: 'org.iq80.leveldb', name: 'leveldb', version: '0.7'
+    // https://mvnrepository.com/artifact/org.iq80.leveldb/leveldb-api
+    compile group: 'org.iq80.leveldb', name: 'leveldb-api', version: '0.7'
 }
 
 test {
