--- a/build.gradle
+++ b/build.gradle
@@ -1,3 +1,5 @@
+import com.sun.org.apache.xalan.internal.xsltc.cmdline.Compile
+
 plugins {
     id 'org.springframework.boot' version '2.2.1.RELEASE'
     id 'io.spring.dependency-management' version '1.0.8.RELEASE'
@@ -95,6 +97,14 @@ dependencies {
     compile group: 'org.iq80.leveldb', name: 'leveldb', version: '0.7'
     // https://mvnrepository.com/artifact/org.iq80.leveldb/leveldb-api
     compile group: 'org.iq80.leveldb', name: 'leveldb-api', version: '0.7'
+    // https://mvnrepository.com/artifact/org.fusesource/sigar
+    compile group: 'org.fusesource', name: 'sigar', version: '1.6.4'
+    // https://mvnrepository.com/artifact/org.projectlombok/lombok
+    compile group: 'org.projectlombok', name: 'lombok', version: '1.18.12'
+
+
+
+
 }
 
 test {
