--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -30,14 +30,17 @@ postgres.name=${POSTGRES_NAME:wdc_pgsql_v0.0.3}
 #开启导入开关
 import.valve=${IMPORT_VALVE:true}
 #pgsql IP
-postgres.ip=${POSTGRES_IP:192.168.1.11}
+postgres.ip=${POSTGRES_IP:192.168.1.111}
 #pgsql密码
 postgres.pwd=${POSTGRES_PWD:replica}
 #端口
-server.port=${SERVER_PORT:8889}
+server.port=${SERVER_PORT:8888}
 #连接的节点
-node=${NODE:192.168.1.11:19585}
+node=${NODE:192.168.1.111:19585}
 #未确认区块最大数
 unconfirmedBlocks=100
 password=123456
 imageVersion=0.0.3
+
+
+wisdom-opeations.version=1.1.0
