--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,13 +4,7 @@ spring.datasource.username=${DB_USERNAME:replica}
 spring.datasource.password=${DB_PASSWORD:replica}
 spring.datasource.type=org.apache.commons.dbcp2.BasicDataSource
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
-#spring:
-#mvc:
-#view:
-#prefix: /WEB-INF/jsp/
-#suffix: .jsp
-#spring.mvc.view.prefix=/
-#spring.mvc.view.suffix=.jsp
+
 spring.mvc.static-path-pattern=/**
 spring.thymeleaf.check-template-location=true
 spring.thymeleaf.prefix=classpath:/templates/
@@ -19,28 +13,9 @@ spring.thymeleaf.encoding=UTF-8
 spring.thymeleaf.cache=true
 spring.thymeleaf.mode = LEGACYHTML5
 
-#postgres端口
-postgres.port=${POSTGRES_PORT:5433}
-#syspassword
-sys.password=${SYS_PASSWORD:123456}
-#Core容器名称
-core.name=${CORE_NAME:wdc_core_v0.0.3}
-#pgsql容器名称
-postgres.name=${POSTGRES_NAME:wdc_pgsql_v0.0.3}
-#开启导入开关
-import.valve=${IMPORT_VALVE:true}
-#pgsql IP
-postgres.ip=${POSTGRES_IP:192.168.1.111}
-#pgsql密码
-postgres.pwd=${POSTGRES_PWD:replica}
-#端口
-server.port=${SERVER_PORT:8888}
-#连接的节点
-node=${NODE:192.168.1.111:19585}
-#未确认区块最大数
-unconfirmedBlocks=100
-password=123456
-imageVersion=0.0.3
+Image=wdc_core_v0.0.3
+System_Password=123456
+
+wisdom-opeations.version=1.1.1
 
 
-wisdom-opeations.version=1.1.0
