--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,3 @@
-import com.sun.org.apache.xalan.internal.xsltc.cmdline.Compile
-
 plugins {
     id 'org.springframework.boot' version '2.2.1.RELEASE'
     id 'io.spring.dependency-management' version '1.0.8.RELEASE'
@@ -11,9 +9,9 @@ group = 'com.wisdom'
 sourceCompatibility = '1.8'
 
 //apply plugin: 'war'
-apply plugin:'java'
 apply plugin:'application'
 mainClassName = 'com.wisdom.monitor.MonitorApplication'
+
 run {
     main = project.getProperty('mainClassName')
 }
@@ -109,6 +107,8 @@ dependencies {
     compile group: 'ch.ethz.ganymed', name: 'ganymed-ssh2', version: 'build210'
     // https://mvnrepository.com/artifact/org.apache.commons/commons-lang3
     compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.8.1'
+    compile fileTree(dir:'libs',include:['*.jar'])
+    compile group: 'org.ethereum', name: 'leveldbjni-all', version: '1.18.3'
 
 }
 
