--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,36 @@
 ############################### 数据库连接配置 ###########################################
-spring.datasource.url=${DATA_SOURCE_URL:jdbc:postgresql://192.168.1.11:5433/postgres}
-spring.datasource.username=${DB_USERNAME:replica}
-spring.datasource.password=${DB_PASSWORD:replica}
-spring.datasource.type=org.apache.commons.dbcp2.BasicDataSource
-spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+#h2配置
+#启用SQL语句的日志记录
+spring.jpa.show-sql = true
+#设置ddl模式
+spring.jpa.hibernate.ddl-auto = update
+##数据库连接设置
+spring.datasource.driverClassName =org.h2.Driver
+#spring.datasource.url = jdbc:h2:mem:dbc2m
+#Windows当前用户路径
+#spring.datasource.url = jdbc:h2:file:~/.h2/dbc2m;AUTO_SERVER=TRUE
+
+spring.datasource.url = jdbc:h2:mem:operations
+spring.datasource.username = sa
+spring.datasource.password =
+
+##数据初始化设置
+#进行该配置后，每次启动程序，程序都会运行resources/db/schema.sql文件，对数据库的结构进行操作。
+spring.datasource.schema=classpath:db/schema.sql
+#进行该配置后，每次启动程序，程序都会运行resources/db/data.sql文件，对数据库的数据操作。
+#spring.datasource.data=classpath:db/data.sql
+
+##h2 web console设置
+#表明使用的数据库平台是h2
+spring.datasource.platform=h2
+# 进行该配置后，h2 web consloe就可以在远程访问了。否则只能在本机访问。
+spring.h2.console.settings.web-allow-others=true
+#进行该配置，你就可以通过YOUR_URL/h2访问h2 web consloe。YOUR_URL是你程序的访问URl。
+spring.h2.console.path=/h2
+#进行该配置，程序开启时就会启动h2 web consloe。当然这是默认的，如果你不想在启动程序时启动h2 web consloe，那么就设置为false。
+spring.h2.console.enabled=true
+
+spring.main.allow-bean-definition-overriding=true
 
 spring.mvc.static-path-pattern=/**
 spring.thymeleaf.check-template-location=true
