--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,7 +10,7 @@ spring.datasource.driverClassName =org.h2.Driver
 #Windows当前用户路径
 #spring.datasource.url = jdbc:h2:file:~/.h2/dbc2m;AUTO_SERVER=TRUE
 
-spring.datasource.url = jdbc:h2:mem:operations
+spring.datasource.url = jdbc:h2:file:~/.h2/h2
 spring.datasource.username = sa
 spring.datasource.password =
 
